Now is possible to filter task works based on project

--- a/project_extended/i18n/it.po
+++ b/project_extended/i18n/it.po
@@ -65,3 +65,7 @@ msgstr "Ordini"
 msgid "Purchase"
 msgstr "Acquisti"
 
+#. module: project
+#: field:project.task.work,project_id:0
+msgid "Project"
+msgstr "Progetto"
