--- a/task_time_control/i18n/it.po
+++ b/task_time_control/i18n/it.po
@@ -205,7 +205,7 @@ msgstr "nome"
 #. module: task_time_control
 #: view:project.task:0
 msgid "Start"
-msgstr "Presa in Carico"
+msgstr "Prendo in Carico"
 
 #. module: task_time_control
 #: code:addons/task_time_control/project_task.py:168
