--- a/sale_order_confirm/i18n/it.po
+++ b/sale_order_confirm/i18n/it.po
@@ -779,7 +779,7 @@ msgstr "Importo Minimo?"
 #. module: sale_order_confirm
 #: help:sale.shop,sale_order_have_minimum:0
 msgid "The Sale Order of this shop have a Minimun Amount"
-msgstr "L'ordine di vendita di questo negozio avrà un importo minimo"
+msgstr "L'ordine di vendita di questa Business Unit avrà un importo minimo"
 
 #. modules: sale_order_confirm
 #: field:sale.order,client_order_ref:0
