--- a/web_client/ea_web-github/addons/web_gantt/i18n/it.po
+++ b/web_client/ea_web-github/addons/web_gantt/i18n/it.po
@@ -29,4 +29,4 @@ msgstr "Gantt"
 #: code:addons/web_gantt/static/src/xml/web_gantt.xml:10
 #, python-format
 msgid "Create"
-msgstr "Crea"
+msgstr "CREA"
