[l10n_it_base] pull regions out on left menù

--- a/l10n_it_base/i18n/it.po
+++ b/l10n_it_base/i18n/it.po
@@ -136,6 +136,12 @@ msgid "Provinces"
 msgstr "Provincie"
 
 #. module: l10n_it_base
+#: model:ir.actions.act_window,name:l10n_it_base.action_province
+#: model:ir.ui.menu,name:l10n_it_base.menu_regioni_partner
+msgid "Regions"
+msgstr "Regioni"
+
+#. module: l10n_it_base
 #: model:res.partner.title,shortcut:l10n_it_base.pf
 msgid "PF"
 msgstr "PF"
